# typsy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/typsy/: __init__.py  app.py  config.py  debug.py  stdout.py
src/typsy/app/: __init__.py  build.py  verbosity.py
